plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.14'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'nacos'
version = '0.0.1'

java {
	sourceCompatibility = '17'
}

repositories {
	maven { url 'https://maven.aliyun.com/repository/public/' }
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2021.0.4.0'
	implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery:2021.0.4.0'
	implementation 'com.alibaba.nacos:nacos-client:2.2.4'
	implementation 'com.alibaba:transmittable-thread-local:2.14.3'

	// 分布式事务,回滚时间字段需要的序列化工具
//	implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-seata:2021.0.1.0'
	implementation 'de.javakaffee:kryo-serializers:0.42'

	implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel:2021.0.4.0'

	// 配置中心
	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
	implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config:2021.0.4.0'

	// openfeign 和 loadbalancer 需要一起引入
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'

	// 数据库连接
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'com.alibaba:druid-spring-boot-starter:1.2.18'
	implementation 'org.springframework:spring-jdbc'
	implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.2'

	compileOnly 'org.projectlombok:lombok:1.18.24'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'

	implementation 'cn.hutool:hutool-all:5.8.21'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.4"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
